syntax = "proto3";
package genres;
option go_package = "pkg/proto/genres;genres_pb";

service Genre {
    rpc GetAll(Empty) returns (GetAllResponse);
}
//Requests

//Responses
message GetAllResponse {
    repeated CategoryModel categories = 1;
}
//Models
message Empty {}
message CategoryModel {
    string name = 1;
    string translitName = 2;
    repeated GenreModel genres = 3;
}
message GenreModel {
    string name = 1;
    string translitName = 2;
}
